# xfoss_cmp_backend

./: README.md  nginx-default  pyproject.toml  uwsgi.ini
src/: app.py
src/libcloud_mod/: ctyun.py
src/libcloud_mods/: __init__.py  ctyun.py  utils.py
src/resources/: todo.py
