[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Peng Hailin <unisko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-libcloud = "^3.3.0"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
uWSGI = "^2.0.19"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
